--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
   },
   "dependencies": {
     "babylon": "^6.4.2",
+    "concat-stream": "^1.5.1",
     "estree-walker": "^0.2.0",
     "glob": "^6.0.4",
+    "globby": "^4.0.0",
     "interop-require": "^1.0.0",
+    "minimist": "^1.2.0",
     "try-resolve": "^1.0.1"
   }
 }
