--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "power-assert": "^1.2.0"
   },
   "dependencies": {
+    "babel-traverse": "^6.4.5",
     "babylon": "^6.4.2",
     "concat-stream": "^1.5.1",
-    "estree-walker": "^0.2.0",
     "glob": "^6.0.4",
     "globby": "^4.0.0",
     "interop-require": "^1.0.0",
