--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "test"
   },
   "scripts": {
-    "build": "babel src --out-dir lib --source-maps",
+    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
     "watch": "babel src --out-dir lib --watch --source-maps",
     "prepublish": "npm run --if-present build",
     "test": "mocha"
@@ -38,8 +38,9 @@
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-plugin-add-module-exports": "^0.1.3-alpha",
+    "babel-plugin-espower": "^2.1.2",
     "babel-preset-es2015": "^6.3.13",
-    "espower-babel": "^4.0.1",
+    "babel-register": "^6.7.2",
     "mocha": "^2.3.4",
     "power-assert": "^1.2.0"
   },
