chore(npm): use babel-preset-power-assert insteadof espower-babel

--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,9 @@
     "development": {
       "plugins": [
         "babel-plugin-espower"
+      ],
+      "presets": [
+        "power-assert"
       ]
     }
   }
